<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMenu"
    android:background="@drawable/main2_fon2">


    <ImageView
        android:id="@+id/iv_menu2.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main2_ghzvjeu" />

    <ImageView
        android:id="@+id/image_cow"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cow_svgrepo_com_1" />

    <ImageView
        android:id="@+id/image_whale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/image_cow"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whale_svgrepo_com_1" />

    <ImageView
        android:id="@+id/image_car"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/image_whale"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/truck_svgrepo_com__1__1" />

    <TextView
        android:id="@+id/tV_cow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_500"
        android:textColor="@color/tv_svg1"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_cow"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/tv_cow2"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/ot_tv"
        android:textColor="@color/tv_svg1"
        android:textSize="6sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_cow"
        tools:ignore="MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/tv_whale1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_1t"
        android:textColor="@color/tv_svg1"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/tV_cow"
        app:layout_constraintTop_toBottomOf="@+id/image_whale"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_whale2"
        android:layout_width="109dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/tv_kit"
        android:textColor="@color/tv_svg1"
        android:textSize="6sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_cow2"
        app:layout_constraintTop_toBottomOf="@+id/image_whale"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_car1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_car_90"
        android:textColor="@color/tv_svg1"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/tv_whale1"
        app:layout_constraintTop_toBottomOf="@+id/image_car"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_car2"
        android:layout_width="112dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/tv_car_down"
        android:textColor="@color/tv_svg1"
        android:textSize="6sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_whale2"
        app:layout_constraintTop_toBottomOf="@+id/image_car"
        tools:ignore="SmallSp" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="390dp"
        android:layout_height="360dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu2.1"
        app:srcCompat="@drawable/main2_rdflhfn" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu2.1"
        app:srcCompat="@drawable/main2_mini" />

    <TextView
        android:id="@+id/tv_main2"
        android:layout_width="305dp"
        android:layout_height="27dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/tv_sort"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton_paper"
        android:layout_width="106dp"
        android:layout_height="96dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:background="@color/btn_main2_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/paper_plane_svgrepo_com"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_paper"
        android:layout_width="99dp"
        android:layout_height="26dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/TV_PAPER"
        android:textColor="@color/tv_svg1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_paper" />

    <ImageButton
        android:id="@+id/ib_glass"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@color/btn_main2_tv"
        app:layout_constraintStart_toEndOf="@+id/imageButton_paper"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/glass"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_glass"
        android:layout_width="99dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/TV_GLASS"
        android:textColor="@color/tv_svg1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_paper"
        app:layout_constraintTop_toBottomOf="@+id/ib_glass" />

    <ImageButton
        android:id="@+id/ib_plastic"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@color/btn_main2_tv"
        app:layout_constraintStart_toEndOf="@+id/ib_glass"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/plastic"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_plastic"
        android:layout_width="99dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/tv_plastic"
        android:textColor="@color/tv_svg1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/tv_glass"
        app:layout_constraintTop_toBottomOf="@+id/ib_plastic"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ib_BATTERIES"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="36dp"
        android:background="@color/btn_main2_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_paper"
        app:srcCompat="@drawable/battery"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_BATTERIES"
        android:layout_width="99dp"
        android:layout_height="26dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/TV_batteries"
        android:textColor="@color/tv_svg1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_BATTERIES"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ib_PLASTICINE"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:background="@color/btn_main2_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ib_BATTERIES"
        app:layout_constraintTop_toBottomOf="@+id/tv_plastic"
        app:srcCompat="@drawable/plasticine"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_PLASTICINE"
        android:layout_width="122dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/TV_plasticine"
        android:textColor="@color/tv_svg1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_BATTERIES"
        app:layout_constraintTop_toBottomOf="@+id/ib_PLASTICINE"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>