<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Paper"
    android:background="@drawable/main2_fon2">

    <ImageView
        android:id="@+id/iv_gl_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_3_1" />

    <ImageView
        android:id="@+id/iv_n_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main3_2" />

    <TextView
        android:id="@+id/tv_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_pr1"
        android:textSize="25sp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/iv_n_paper"
        app:layout_constraintEnd_toEndOf="@+id/iv_n_paper"
        app:layout_constraintStart_toStartOf="@+id/iv_n_paper"
        app:layout_constraintTop_toTopOf="@+id/iv_n_paper"
        app:layout_constraintVertical_bias="0.404" />

    <ImageView
        android:id="@+id/iv_pr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_n_paper"
        app:srcCompat="@drawable/paper1_2" />

    <TextView
        android:id="@+id/tv_infa_pr_1"
        android:layout_width="168dp"
        android:layout_height="120dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/info_pr_1"
        android:textColor="@color/infa"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gl_paper"
        app:layout_constraintEnd_toStartOf="@+id/tv_infa_pr_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_n_paper"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/iv_pr_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="193dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gl_paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_infa_pr_1"
        app:srcCompat="@drawable/paper1_3" />

    <TextView
        android:id="@+id/tv_infa2"
        android:layout_width="173dp"
        android:layout_height="154dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/infa_2"
        android:textColor="@color/infa"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gl_paper"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/iv_pr_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_infa_pr_1" />

    <ImageView
        android:id="@+id/iv_pr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_infa2"
        app:srcCompat="@drawable/paper1_4" />

    <TextView
        android:id="@+id/tv_infa3"
        android:layout_width="173dp"
        android:layout_height="154dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/infa_3"
        android:textColor="@color/infa"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_pr3"
        app:layout_constraintEnd_toStartOf="@+id/iv_pr3"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_pr_2" />

    <Button
        android:id="@+id/btn_main_pr"
        android:layout_width="228dp"
        android:layout_height="57dp"
        android:layout_marginTop="496dp"
        android:backgroundTint="@color/btn_main2_tv"
        android:text="@string/t_btn_main"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_n_paper" />

</androidx.constraintlayout.widget.ConstraintLayout>